source/puppet/3.8/man/certificate.md
---
layout: default
built_from_commit: c0673af42427fbe0b22ff97c8e5fa3244715eeae
title: 'Man Page: puppet certificate'
canonical: /puppet/latest/reference/man/certificate.html
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-certificate</code> - <span class="man-whatis">Provide access to the CA for certificate management.</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>puppet certificate <var>action</var> [--terminus TERMINUS]
[--extra HASH]
<var>--ca-location LOCATION</var></p>

<h2 id="DESCRIPTION">DESCRIPTION</h2>

<p>This subcommand interacts with a local or remote Puppet certificate
authority. Currently, its behavior is not a full superset of <code>puppet
cert</code>; specifically, it is unable to mimic puppet cert's "clean" option,
and its "generate" action submits a CSR rather than creating a
signed certificate.</p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any setting that's valid in the configuration
file is also a valid long argument, although it may or may not be
relevant to the present action. For example, <code>server</code> and <code>run_mode</code> are valid
settings, so you can specify <code>--server &lt;servername></code>, or
<code>--run_mode &lt;runmode></code> as an argument.</p>

<p>See the configuration file documentation at
<a href="http://docs.puppetlabs.com/puppet/latest/reference/configuration.html" data-bare-link="true">http://docs.puppetlabs.com/puppet/latest/reference/configuration.html</a> for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet with
<code>--genconfig</code>.</p>

<dl>
<dt>--render-as FORMAT</dt><dd>The format in which to render output. The most common formats are <code>json</code>,
<code>s</code> (string), <code>yaml</code>, and <code>console</code>, but other options such as <code>dot</code> are
sometimes available.</dd>
<dt>--verbose</dt><dd>Whether to log verbosely.</dd>
<dt class="flush">--debug</dt><dd>Whether to log debug information.</dd>
<dt>--ca-location LOCATION</dt><dd><p>Whether to act on the local certificate authority or one provided by a
remote puppet master. Allowed values are 'local' and 'remote.'</p>

<p>This option is required.</p></dd>
<dt>--extra HASH</dt><dd>A terminus can take additional arguments to refine the operation, which
are passed as an arbitrary hash to the back-end.  Anything passed as
the extra value is just send direct to the back-end.</dd>
<dt>--terminus TERMINUS</dt><dd><p>Indirector faces expose indirected subsystems of Puppet. These
subsystems are each able to retrieve and alter a specific type of data
(with the familiar actions of <code>find</code>, <code>search</code>, <code>save</code>, and <code>destroy</code>)
from an arbitrary number of pluggable backends. In Puppet parlance,
these backends are called terminuses.</p>

<p>Almost all indirected subsystems have a <code>rest</code> terminus that interacts
with the puppet master's data. Most of them have additional terminuses
for various local data models, which are in turn used by the indirected
subsystem on the puppet master whenever it receives a remote request.</p>

<p>The terminus for an action is often determined by context, but
occasionally needs to be set explicitly. See the "Notes" section of this
face's manpage for more details.</p></dd>
</dl>


<h2 id="ACTIONS">ACTIONS</h2>

<dl>
<dt><code>destroy</code> - Delete a certificate.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet certificate destroy [--terminus TERMINUS]
[--extra HASH]
<var>--ca-location LOCATION</var>
<var>host</var></p>

<p><code>DESCRIPTION</code></p>

<p>Deletes a certificate. This action currently only works on the local CA.</p>

<p><code>RETURNS</code></p>

<p>Nothing.</p></dd>
<dt><code>find</code> - Retrieve a certificate.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet certificate find [--terminus TERMINUS]
[--extra HASH]
<var>--ca-location LOCATION</var>
<var>host</var></p>

<p><code>DESCRIPTION</code></p>

<p>Retrieve a certificate.</p>

<p><code>RETURNS</code></p>

<p>An x509 SSL certificate.</p>

<p>Note that this action has a side effect of caching a copy of the
certificate in Puppet's <code>ssldir</code>.</p></dd>
<dt><code>generate</code> - Generate a new certificate signing request.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet certificate generate [--terminus TERMINUS]
[--extra HASH]
<var>--ca-location LOCATION</var>
[--dns-alt-names NAMES]
<var>host</var></p>

<p><code>DESCRIPTION</code></p>

<p>Generates and submits a certificate signing request (CSR) for the
specified host. This CSR will then have to be signed by a user
with the proper authorization on the certificate authority.</p>

<p>Puppet agent usually handles CSR submission automatically. This action is
primarily useful for requesting certificates for individual users and
external applications.</p>

<p><code>OPTIONS</code>
<var>--dns-alt-names NAMES</var> -
The comma-separated list of alternative DNS names to use for the local host.</p>

<p>When the node generates a CSR for itself, these are added to the request
as the desired <code>subjectAltName</code> in the certificate: additional DNS labels
that the certificate is also valid answering as.</p>

<p>This is generally required if you use a non-hostname <code>certname</code>, or if you
want to use <code>puppet kick</code> or <code>puppet resource -H</code> and the primary certname
does not match the DNS name you use to communicate with the host.</p>

<p>This is unnecessary for agents, unless you intend to use them as a server for
<code>puppet kick</code> or remote <code>puppet resource</code> management.</p>

<p>It is rarely necessary for servers; it is usually helpful only if you need to
have a pool of multiple load balanced masters, or for the same master to
respond on two physically separate networks under different names.</p>

<p><code>RETURNS</code></p>

<p>Nothing.</p></dd>
<dt><code>info</code> - Print the default terminus class for this face.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet certificate info [--terminus TERMINUS]
[--extra HASH]
<var>--ca-location LOCATION</var></p>

<p><code>DESCRIPTION</code></p>

<p>Prints the default terminus class for this subcommand. Note that different
run modes may have different default termini; when in doubt, specify the
run mode with the '--run_mode' option.</p></dd>
<dt><code>list</code> - List all certificate signing requests.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet certificate list [--terminus TERMINUS]
[--extra HASH]
<var>--ca-location LOCATION</var></p>

<p><code>DESCRIPTION</code></p>

<p>List all certificate signing requests.</p>

<p><code>RETURNS</code></p>

<p>An array of #inspect output from CSR objects. This output is
currently messy, but does contain the names of nodes requesting
certificates. This action returns #inspect strings even when used
from the Ruby API.</p></dd>
<dt><code>save</code> - Invalid for this subcommand.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet certificate save [--terminus TERMINUS]
[--extra HASH]
<var>--ca-location LOCATION</var>
<var>key</var></p>

<p><code>DESCRIPTION</code></p>

<p>Invalid for this subcommand.</p></dd>
<dt><code>search</code> - Invalid for this subcommand.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet certificate search [--terminus TERMINUS]
[--extra HASH]
<var>--ca-location LOCATION</var>
<var>query</var></p>

<p><code>DESCRIPTION</code></p>

<p>Invalid for this subcommand.</p></dd>
<dt><code>sign</code> - Sign a certificate signing request for HOST.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet certificate sign [--terminus TERMINUS]
[--extra HASH]
<var>--ca-location LOCATION</var>
[--[no-]allow-dns-alt-names]
<var>host</var></p>

<p><code>DESCRIPTION</code></p>

<p>Sign a certificate signing request for HOST.</p>

<p><code>OPTIONS</code>
<var>--[no-]allow-dns-alt-names</var> -
Whether or not to accept DNS alt names in the certificate request</p>

<p><code>RETURNS</code></p>

<p>A string that appears to be (but isn't) an x509 certificate.</p></dd>
</dl>


<h2 id="EXAMPLES">EXAMPLES</h2>

<p><code>generate</code></p>

<p>Request a certificate for "somenode" from the site's CA:</p>

<p>$ puppet certificate generate somenode.puppetlabs.lan --ca-location remote</p>

<p><code>sign</code></p>

<p>Sign somenode.puppetlabs.lan's certificate:</p>

<p>$ puppet certificate sign somenode.puppetlabs.lan --ca-location remote</p>

<h2 id="NOTES">NOTES</h2>

<p>This subcommand is an indirector face, which exposes <code>find</code>, <code>search</code>, <code>save</code>,
and <code>destroy</code> actions for an indirected subsystem of Puppet. Valid termini for
this face include:</p>

<ul>
<li><code>ca</code></li>
<li><code>disabled_ca</code></li>
<li><code>file</code></li>
<li><code>rest</code></li>
</ul>


<h2 id="COPYRIGHT-AND-LICENSE">COPYRIGHT AND LICENSE</h2>

<p>Copyright 2011 by Puppet Labs
Apache 2 license; see COPYING</p>

</div>
